Added images and name heading to html file. Initial version of html complete

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta>: name="description" content="HTML Css Photo"
-    <title>Document</title>
+    <meta name="description" content="HTML Css Photo">
+    <link rel="stylesheet" href="style.css">
+    <title>Photo Site</title>
 </head>
 <body>
-    
+    <!--Symbols can be used in HTML-->
+<p>Kathy &diams; Coffee</p> 
+
+<img src="Images/caradhras.jpeg" alt="Snow covered mountains">
+<img src="Images/waterfall.jpeg" alt="Black & white waterfall">
+<img src="Images/tree.jpeg" alt="Silhouette of a treet">
+<img src="Images/ocean.jpeg" alt="Low tide">
+<img src="Images/field" alt="Misty country side">
+<img src="Images/snoweyForest.jpeg" alt="Snow covered forest">
+<img src="Images/tatooine.jpeg" alt="Desert dunes">
+
 </body>
 </html>
