--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <img src="Images/caradhras.jpeg" alt="Snow covered mountains">
 <img src="Images/waterfall.jpeg" alt="Black & white waterfall">
-<img src="Images/tree.jpeg" alt="Silhouette of a treet">
+<img src="Images/tree.jpeg" alt="Silhouette of a tree">
 <img src="Images/ocean.jpeg" alt="Low tide">
 <img src="Images/field" alt="Misty country side">
+<img src="Images/nonSnowyMountain.jpeg" alt="Mountain ridge">
 <img src="Images/snoweyForest.jpeg" alt="Snow covered forest">
 <img src="Images/tatooine.jpeg" alt="Desert dunes">
 
