--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Photo Site</title>
 </head>
 <body>
-    <!--Symbols can be used in HTML-->
+<!--Symbols can be used in HTML-->
 <p>Kathy &diams; Coffee</p> 
 
 <img src="Images/caradhras.jpeg" alt="Snow covered mountains">
 <img src="Images/waterfall.jpeg" alt="Black & white waterfall">
 <img src="Images/tree.jpeg" alt="Silhouette of a tree">
 <img src="Images/ocean.jpeg" alt="Low tide">
-<img src="Images/field" alt="Misty country side">
-<img src="Images/nonSnowyMountain.jpeg" alt="Mountain ridge">
-<img src="Images/snoweyForest.jpeg" alt="Snow covered forest">
+<img src="Images/field.jpeg" alt="Misty country side">
+<img src="Images/nonSnowyMountains.jpeg" alt="Mountain ridge">
+<img src="Images/snowyForest.jpeg" alt="Snow covered forest">
 <img src="Images/tatooine.jpeg" alt="Desert dunes">
 
 </body>
